Rank (sorting based on account balances {backend only, but working 100%}}

--- a/src/main/webapp/resources/js/views/NavHeader.html
+++ b/src/main/webapp/resources/js/views/NavHeader.html
@@ -56,7 +56,7 @@
 
 
                 <li><a ng-href="#/openChallenges" >Challenges <span class="glyphicon glyphicon-envelope"></span></a></li>
-                <li><a ng-href="#/trade">Trade</a></li>
+                <li ng-show='loggedIn'><a ng-href="#/trade">Trade</a></li>
                 <li><a ng-href="#/ranks">Ranks</a></li>
 
 
