rank updating dynamically navbar adjusted to only show trade etc to users who are loggeed in

--- a/src/main/webapp/resources/js/views/NavHeader.html
+++ b/src/main/webapp/resources/js/views/NavHeader.html
@@ -55,9 +55,9 @@
                 <li><a ng-href="#/pairs">Current Forex Prices</a>
 
 
-                <li><a ng-href="#/openChallenges" >Challenges <span class="glyphicon glyphicon-envelope"></span></a></li>
+                <li ng-show='loggedIn'><a ng-href="#/openChallenges" >Challenges <span class="glyphicon glyphicon-envelope"></span></a></li>
                 <li ng-show='loggedIn'><a ng-href="#/trade">Trade</a></li>
-                <li><a ng-href="#/ranks">Ranks</a></li>
+                <li ng-show='loggedIn'><a ng-href="#/rank">Ranks</a></li>
 
 
 
