--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -76,7 +76,7 @@
 
         <td>{{action}}</td>
         <td>{{x.symbols}}</td>
-        <td colspan="5">Value:  {{reqSym}}: {{valueInBaseCurrencyView}}  ${{valueInAccountCurrencyView}}</td>
+        <td colspan="5">Value:  {{reqSym}}: {{positionValueView}}  ${{valueInAccountCurrencyView}}</td>
         <td colspan="2">P/L :${{profitAndLossView}}</td>
         <td><button class="btn btn-default btn-block btn-danger"ng-click="closeTrade(x)"  >Close</button></td>
 
