Displaying users rank in who's online view

--- a/src/main/webapp/resources/js/views/Online.html
+++ b/src/main/webapp/resources/js/views/Online.html
@@ -2,7 +2,7 @@
     <thead>
     <tr>
         <th>Username</th>
-        <th>The rank</th>
+        <th>Ranking</th>
         <th>Duration</th>
         <th>Stake</th>
         <th>Challenge</th>
@@ -13,7 +13,7 @@
     <tbody>
     <tr ng-repeat="opponent in online">
         <td>{{opponent.username}}</td>
-        <td>{{currUser.username}}</td>
+        <td>{{opponent.rank.currentRank}}</td>
         <td><select ng-model="selectedTime" ng-options="t for t in gameTimes"></td>
         <td><select ng-model="selectedStake" ng-options="s for s in gameStakes"></td>
         <td><button ng-click="challenge(opponent,selectedTime,selectedStake)" class="btn btn-success" >Challenge</button></td>
