--- a/src/main/webapp/resources/js/views/OpenChallenges.html
+++ b/src/main/webapp/resources/js/views/OpenChallenges.html
@@ -27,6 +27,8 @@
         <th></th>
         <th>Opponent</th>
         <th>Time</th>
+        <th>Duration</th>
+        <th>Stake</th>
         <th>Status</th>
 
         <th>Option</th>
@@ -39,6 +41,8 @@
         <td>You Challenged</td>
         <td>{{x.opponentName}}</td>
         <td>{{x.challengeSent}}</td>
+        <td>{{x.duration}}</td>
+        <td>{{x.stake}}</td>
         <td ng-if="!x.withdrawen && !x.declined">{{"Open"}}</td>
         <td ng-if="x.withdrawen">{{"Withdrawen"}}</td>
         <td ng-if="x.declined">{{"Declined"}}</td>
@@ -67,6 +71,8 @@
         <th></th>
         <th>Challenger</th>
         <th>Time</th>
+        <th>Duration</th>
+        <th>Stake</th>
 
         <th>Status</th>
         <th colspan="2">Option</th>
@@ -79,6 +85,8 @@
         <td>Challenge recieved from</td>
         <td>{{x.challengerName}}</td>
         <td>{{x.challengeSent}}</td>
+        <td>{{x.duration}}</td>
+        <td>{{x.stake}}</td>
 
         <td ng-if="!x.declined && !x.withdrawen">{{"Open"}}</td>
         <td ng-if="x.declined">{{"Declined"}}</td>
