--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -55,7 +55,13 @@
     <tbody>
     <tr ng-repeat-start="x in pairs">
         <td align="left" colspan="2">{{x.symbols}}</td>
-        <td bgcolor="	#48D1CC"align="center">..%</td>
+
+        <!--<td bgcolor="#48D1CC"align="center">{{((x.open - x.ask)*100).toFixed(2)}}%</td>-->
+
+
+        <td ng-if="x.symbols=='USD/JPY'" bgcolor="#48D1CC"align="center">{{((x.open - x.ask)).toFixed(2)}}%</td>
+        <td ng-if="x.symbols!='USD/JPY'" bgcolor="#48D1CC"align="center">{{((x.open - x.ask)*100).toFixed(2)}}%</td>
+
 
         <td bgcolor="#F0F8FF" align="center">{{x.bid}}</td>
         <td bgcolor="#F0F8FF" align="center">
