Ranking system is working perfectly
CHanged relationship mapping
Rank now has a User

So @OneToOne
    private User user
   is in rank.

   I still now need to add attributes to the user object that will hold the currentRank and the bestRank so I can update the onlineUsers and allUsers view's accordingly

--- a/src/main/webapp/resources/js/views/Rank.html
+++ b/src/main/webapp/resources/js/views/Rank.html
@@ -9,8 +9,8 @@
 
     <tbody>
     <tr ng-repeat="x in ranks">
-        <td>{{x.username}}</td>
-        <td>{{ranks.indexOf(x)+1}}</td>
+        <td>{{x.user.username}}</td>
+        <td>{{x.currentRank}}</td>
         <td>{{x.bestRank}}</td>
     </tr>
     </tbody>
