--- a/src/main/webapp/resources/js/views/AllUsers.html
+++ b/src/main/webapp/resources/js/views/AllUsers.html
@@ -10,7 +10,7 @@
     <tbody>
     <tr ng-repeat="x in allUsers">
         <td>{{x.username}}</td>
-        <td>{{x.rank.currentRank}}</td>
+        <td>{{x.currentRank}}</td>
         <td><button ng-click="getStats()" class="btn btn-success">Stats</button></td>
     </tr>
     </tbody>
