--- a/src/main/webapp/resources/js/views/Rank.html
+++ b/src/main/webapp/resources/js/views/Rank.html
@@ -11,7 +11,7 @@
     <tr ng-repeat="x in ranks">
         <td>{{x.user.username}}</td>
         <td>{{x.currentRank}}</td>
-        <td>{{x.user.account.balance}}</td>
+        <td>{{x.user.bestRank}}</td>
     </tr>
     </tbody>
 
