--- a/src/main/webapp/resources/js/views/NavHeader.html
+++ b/src/main/webapp/resources/js/views/NavHeader.html
@@ -56,7 +56,7 @@
 
 
                 <li ng-show='$root.loggedIn'><a ng-href="#/openChallenges" >Challenges <span class="glyphicon glyphicon-envelope"></span></a></li>
-                <li ng-show='$root.loggedIn'><a ng-href="#/trade">Trade</a></li>
+                <li ng-show='$root.loggedIn'><a ng-href="#/trade/0">Trade</a></li>
                 <li ng-show='$root.loggedIn'><a ng-href="#/rank">Ranks</a></li>
 
 
