CHanging closetrade buttons/params based on whether it's a live trade or a game trade
More implementation to be don server side to amend the GameAccount

--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -84,7 +84,8 @@
         <td>{{x.symbols}}</td>
         <td colspan="5">Value:  {{reqSym}}: {{positionValueView}}  ${{valueInAccountCurrencyView}}</td>
         <td colspan="2">P/L :${{profitAndLossView}}</td>
-        <td><button class="btn btn-default btn-block btn-danger"ng-click="closeTrade(x)"  >Close</button></td>
+        <td ng-show='!check'><button class="btn btn-default btn-block btn-danger"ng-click="closeLiveTrade(x)"  >Close</button></td>
+        <td ng-show='check'><button class="btn btn-default btn-block btn-warning"ng-click="closeGameTrade(x)"  >Close</button></td>
 
 
 
