--- a/src/main/webapp/resources/js/views/LogReg.html
+++ b/src/main/webapp/resources/js/views/LogReg.html
@@ -33,18 +33,18 @@
 
                                             <!--Header-->
                                             <div align="center" class="form-header  green darken-4">
-                                                <h3><i class="fa fa-lock"></i> Customer Login:</h3>
+                                                <h3><i class="fa fa-lock"></i> User Login:</h3>
                                             </div>
 
                                             <!--Body-->
                                             <div class="md-form" >
                                                 <i class="fa fa-envelope prefix"></i>
-                                                <input type="text" ng-model="login.handle" id="form2" class="form-control" placeholder = "Your Email">
+                                                <input type="text" ng-model="login.handle" id="form2" class="form-control" placeholder = " Username or Email">
                                             </div>
 
                                             <div class="md-form">
                                                 <i class="fa fa-lock prefix"></i>
-                                                <input type="password" ng-model="login.password" id="form4" class="form-control" placeholder = "Master Password">
+                                                <input type="password" ng-model="login.password" id="form4" class="form-control" placeholder = " Password">
                                             </div>
 
                                             <div class="text-center">
@@ -70,36 +70,36 @@
 
                                         <!--Header-->
                                         <div align="center" class="form-header  yellow darken-4">
-                                            <h3><i class="fa fa-lock"></i> Customer Register:</h3>
+                                            <h3><i class="fa fa-lock"></i> New User Registration:</h3>
                                         </div>
 
                                         <!--Body-->
                                         <div class="md-form" >
                                             <i class="fa   fa-user prefix"></i>
-                                            <input type="text" ng-model="register.firstName" name="firstName"  tabindex="1" class="form-control" placeholder="First Name">
+                                            <input type="text" ng-model="register.firstName" name="firstName"  tabindex="1" class="form-control" placeholder=" First Name">
                                         </div>
                                         <div class="md-form" >
                                             <i class="fa   fa-user prefix"></i>
-                                            <input type="text" ng-model="register.lastName" name="lastName"  tabindex="1" class="form-control" placeholder="Last Name">
+                                            <input type="text" ng-model="register.lastName" name="lastName"  tabindex="1" class="form-control" placeholder=" Last Name">
                                         </div>
 
                                         <div class="md-form" >
                                             <i class="fa  fa-money prefix"></i>
-                                            <input type="text" ng-model="register.username" name="username"  tabindex="1" class="form-control" placeholder="Username">
+                                            <input type="text" ng-model="register.username" name="username"  tabindex="1" class="form-control" placeholder=" Username">
                                         </div>
                                         <div class="md-form" >
                                             <i class="fa fa-envelope prefix"></i>
-                                            <input type="text" ng-model="register.email" name="email"  tabindex="1" class="form-control" placeholder="Email">
+                                            <input type="text" ng-model="register.email" name="email"  tabindex="1" class="form-control" placeholder=" Email">
                                         </div>
 
                                         <div class="md-form">
                                             <i class="fa fa-lock prefix"></i>
-                                            <input type="password" ng-model="register.password" name="password"  tabindex="1" class="form-control" placeholder="Password">
+                                            <input type="password" ng-model="register.password" name="password"  tabindex="1" class="form-control" placeholder=" Password">
                                         </div>
 
                                         <div class="md-form">
                                             <i class="fa fa-lock prefix"></i>
-                                            <input type="password" ng-model="register.confirmPassword" name="confirmPassword"  tabindex="1" class="form-control" placeholder="Confirm Password">
+                                            <input type="password" ng-model="register.confirmPassword" name="confirmPassword"  tabindex="1" class="form-control" placeholder=" Confirm Password">
                                         </div>
 
                                         <fieldset class="form-group">
