Some issues fixed mMargin being adjusted when a trade is closed Available funds view is being updated properly for a trade
when trade button is pressed, trade rest controller is returning a trade object
I will use this to identify each trade individually in play, so they are not overwriting each other

--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -27,7 +27,7 @@
 
 <br><br><br>
 
-<table align="center" width=850 style= 'table-layout:fixed'>
+<table align="center" wfidth=850 style= 'table-layout:fixed'>
     <col width="100px" />
     <col width="100px" />
     <col width="100px" />
