Isolated half the trade.js controller

--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -135,7 +135,7 @@
 
             <tr>
                 <td>$</td>
-                <td colspan="2">{{marginRequiredUSDView}}</td>
+                <td colspan="2">{{preTradeMarginRequiredUSDView}}</td>
             </tr>
 
             </tbody>
