lot's more implementation done multi trades (UPDATED) closing trades (UPDATED) amended trade object to include position size (for the back end)
added updateAndSave method to tradeDAO

--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -124,7 +124,7 @@
             <tbody md-body>
             <tr md-row>
                 <td><button ng-click="increment();">+</button></td>
-                <td>   Position: {{position}} </td>
+                <td>   Position: {{positionUnits}} </td>
                 <td> <button ng-click="decrement();">-</button></td>
             </tr>
 
