Persisting each users profit and loss tidied up methods, reduced code size etc

--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -20,7 +20,7 @@
         <td>${{availableView}}</td>
         <td>${{equityView}}</td>
         <td>${{mMarginView}}</td>
-        <td>${{profitAndLossView}}</td>
+        <td>${{PLV.toFixed(2)}}</td>
     </tr>
     </tbody>
 </table>
