Total Margin added user

--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -10,7 +10,7 @@
     <tr>
         <th style = "background-color:#BDB76B;color:#ffffff;">Available</th>
         <th style = "background-color:#BDB76B;color:#ffffff;">Equity</th>
-        <th style = "background-color:#BDB76B;color:#ffffff;">M.Margin</th>
+        <th style = "background-color:#BDB76B;color:#ffffff;">Margin</th>
         <th style = "background-color:#BDB76B;color:#ffffff;">Profit/Loss</th>
     </tr>
     </thead>
@@ -19,7 +19,7 @@
     <tr>
         <td>${{availableView}}</td>
         <td>${{equityView}}</td>
-        <td>${{mMarginView}}</td>
+        <td>${{mMargin.toFixed(2)}}</td>
         <td>${{PLV.toFixed(2)}}</td>
     </tr>
     </tbody>
