Graph added to show spread depth

--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -125,6 +125,18 @@
 
 <br>
 
+<div align = "center">
+
+    <div  style="height:500px;width:800px;" >
+        <div class="panel-heading">
+            <h4 align="center"><b>Spread Depth Indicator</b></h4>
+        </div>
+        <canvas id="chartLine" class="chart chart-line"
+                chart-data="data" chart-labels="labels" >
+        </canvas>
+    </div>
+</div>
+
 
 
 
