grao=ph in trade put into a well

--- a/src/main/webapp/resources/js/views/Trade.html
+++ b/src/main/webapp/resources/js/views/Trade.html
@@ -127,7 +127,7 @@
 
 <div align = "center">
 
-    <div  style="height:500px;width:800px;" >
+    <div  class="well" style="height:500px;width:800px;" >
         <div class="panel-heading">
             <h4 align="center"><b>Spread Depth Indicator</b></h4>
         </div>
